Fixed UI alignment issue on checkout

--- a/src/component/CartItem/CartItem.style.scss
+++ b/src/component/CartItem/CartItem.style.scss
@@ -125,10 +125,13 @@
   &-Content {
     height: auto;
     width: 60%;
-
     @include desktop() {
       height: 130px;
       width: 100%;
+      margin-left: 6px;
+      &_isArabic {
+        margin-left: 0px;
+      }
     }
     @include tablet {
       width: 100%;
@@ -148,10 +151,12 @@
 
   &-Wrapper {
     width: 100%;
-    // display: flex;
-    display: grid;
-    grid-gap: 3px;
-    grid-template-columns: auto auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    // display: grid;
+    // grid-gap: 3px;
+    // grid-template-columns: auto auto;
     background: var(--cart-item-background);
     padding-top: 15px;
     height: auto;
@@ -226,7 +231,7 @@
     // margin-right: 18px;
 
     &_isArabic {
-      margin: 0 0 0 24px;
+      margin: 0 0 0 6px;
     }
 
     &_isCartPage {
@@ -301,7 +306,7 @@
       padding-right: 0;
       padding-left: 5px;
     }
-    &-Discount{
+    &-Discount {
       margin-left: 4px !important;
     }
     span {
